--- a/CuteStars.html
+++ b/CuteStars.html
@@ -150,7 +150,7 @@
 			<form action="http://www.SnapHost.com/captcha/send.aspx" id="ContactUsCaptchaWebForm" method="post" onsubmit="return ValidateForm(this);" target="_top">
 			<input id="skip_WhereToSend" name="skip_WhereToSend" type="hidden" value="princessgabby0@gmail.com" />
 			<input id="skip_SnapHostID" name="skip_SnapHostID" type="hidden" value="Q22RZWLK5NBL" />
-			<input id="skip_WhereToReturn" name="skip_WhereToReturn" type="hidden" value="http://www.YourWebsiteAddress.com/ThankYouPage.htm" />
+			<input id="skip_WhereToReturn" name="skip_WhereToReturn" type="hidden" value="https://gabby122torres.github.io/CuteStars.html" />
 			<input id="skip_Subject" name="skip_Subject" type="hidden" value="Sign Up Web Form" />
 			<input id="skip_ShowUsersIp" name="skip_ShowUsersIp" type="hidden" value="1" />
 			<input id="skip_SendCopyToUser" name="skip_SendCopyToUser" type="hidden" value="1" />
